objects/IndustryMembership__c.object
<CustomObject>
    <description>May 2013 Release. This object stores all the industry memberships related to an account.  This is a requirement from Partner Relationship Management.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Industry_Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IndustryMembership__c</fullName>
        <label>Industry Affiliation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipCatalog__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Affiliation Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Industry Affiliations are allowed.</errorMessage>
            <filterItems>
                <field>MembershipCatalog__c.Type__c</field>
                <operation>equals</operation>
                <value>Industry Affiliation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MembershipCatalog__c</referenceTo>
        <relationshipLabel>Industry Affiliations</relationshipLabel>
        <relationshipName>IndustryMemberships1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>TEXT(  MembershipCatalog__r.Type__c  )</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Industry Affiliation</label>
    <nameField>
        <displayFormat>IA-{0000}</displayFormat>
        <label>IA Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Industry Affiliations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>INA_VR_OCT13PRM01_CheckAccountCountry</fullName>
        <active>true</active>
        <description>For PRM October 2013 Release
To restrict Users to select Account only from the Affiliation Catalog&apos;s Country</description>
        <errorConditionFormula>AND( NOT($User.BypassVR__c),
NOT( Account__r.Country__c  = MembershipCatalog__r.Country__c )
)</errorConditionFormula>
        <errorMessage>Account&apos;s Country and Membership Affiliation&apos;s Country do not match. Please select another Account.</errorMessage>
    </validationRules>
</CustomObject>